<resources>
    <string name="app_name">OMR Checker</string>

    <string name="camera_permission_confirmation">This app require permission to access camera for scanning OMR Sheet.</string>
    <string name="camera_permission_not_granted">This app cannot do anything without camera permission.</string>

    <string name="picture_taken">Picture taken</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scan_omr">Scan OMR</string>
    <string name="title_more">More</string>
    <string name="no_of_questions">No. of Questions</string>

    <!-- OMR Sheet Types -->
    <string name="twenty">20</string>
    <string name="hundred">100</string>

    <!-- OMR Key -->
    <string name="title_answer_key">Answer Key</string>
    <string name="save_answer_key">(Press back to save answer key)</string>

    <!-- Preference -->

    <string name="title_preference_tutorial">Tutorial</string>
    <string name="key_preference_tutorial">tutorial</string>

    <string name="title_preference_answersheets">Answer Sheets</string>
    <string name="key_preference_answersheets">answersheets</string>

    <string name="title_preference_opensourcelibraries">Open Source Libraries</string>
    <string name="dialog_title_preference_opensourcelibraries"></string>
    <string name="key_preference_opensourcelibraries">opensourcelibraries</string>

    <string name="title_preference_privacy_policy">Privacy Policy</string>
    <string name="key_preference_privacy_policy">privacypolicy</string>

    <string name="title_preference_contactus">Contact Us</string>
    <string name="key_preference_contactus">contactus</string>

    <string name="title_preference_about">About</string>
    <string name="key_preference_about">about</string>

    <string name="title_activity_settings">Settings</string>
    <string name="url_answersheet_20_questions">http://letssolvetogether.in/answersheets/letssolvetogether_20_questions.pdf</string>
    <string name="url_privacy_policy">http://letssolvetogether.in/privacy.html</string>
    <string name="url_fb_letssolvetogether">https://fb.com/letssolvetogether.in</string>
    <string name="url_letssolvetogether">http://letssolvetogether.in</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Download and Print Answersheet</string>
    <string name="slide_1_desc">OR \n\n http://letssolvetogether.in/answersheets/letssolvetogether_20_questions.pdf</string>

    <string name="slide_2_title">Set Answer Key</string>
    <string name="slide_2_desc"></string>

    <string name="slide_3_title">Scan OMR Sheet</string>
    <string name="slide_3_desc"></string>

    <string name="slide_4_title">Get Score</string>
    <string name="slide_4_desc"></string>

</resources>